--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Formatador de Chamados - NOC / Lanlink</title>
+  <title>Organizador de Chamados - ETICE - NOC / Lanlink</title>
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="icon.png">
   <style>
     
     body {
@@ -601,4 +603,5 @@ CRD	Caridade/Ce	IBP	Ibiapina/Ce	MCA	Meruoca/Ce	PTT	Potiretama/Ce	VCS	Vicosa Do C
   </script>
 </body>
 </html>
+
 
