--- a/index.html
+++ b/index.html
@@ -166,6 +166,23 @@
       .buttons { flex-direction:column; }
       button { min-width:unset; }
     }
+
+        /* === Rodapé === */
+    footer {
+      text-align: center;
+      font-size: 14px;
+      font-weight: 600;
+      color: #fff;
+      background: #0066cc;
+      padding: 14px 0;
+      margin-top: 40px;
+      box-shadow: 0 -3px 8px rgba(0,0,0,0.15);
+      letter-spacing: 0.5px;
+    }
+    footer span {
+      color: #ffdd57; /* destaque em amarelo para "Lucas Sipriano" */
+    }
+    
   </style>
 </head>
 <body>
@@ -601,7 +618,13 @@ CRD	Caridade/Ce	IBP	Ibiapina/Ce	MCA	Meruoca/Ce	PTT	Potiretama/Ce	VCS	Vicosa Do C
     formatadorDiv.style.display = '';
     apoioDiv.style.display = 'none';
   </script>
+
+ <footer>
+    Desenvolvido por <span>Lucas Sipriano</span> — Todos os direitos reservados ©
+ </footer>
+  
 </body>
 </html>
+
 
 
