--- a/index.html
+++ b/index.html
@@ -287,6 +287,34 @@ Local para encontrar os mapas ETICE no Zabbix:
         </pre>
       </div>
 
+      
+      <div class="card">
+        <h3>📝 REGISTRO NO IFS ASSYST</h3>
+        <pre>
+Segue atualização de procedimento ETICE:
+
+- Todos os chamados do NOC devem ser registrados na fila <strong>NOC ETICE.</strong>
+- Após a conclusão de todas as tratativas necessárias, o chamado deverá ser encaminhado para a fila <strong>CDC Suporte – ETICE.</strong>
+
+Exemplos de tratativas:
+
+-Acionamento da ENEL.
+-Contato com o Local.
+-Acionamento de Sobreaviso.
+
+Obs 1:
+
+<strong>O plantão da ETICE funciona das 18h00 às 08h00. Aos sábados e domingos, o atendimento ocorre durante 24 horas.</strong>
+
+Obs 2:
+
+<strong>Excessões para eventos massivos. Em casos de eventos massivos, o sobreaviso deve ser comunicado com antecedência mínima de 10 minutos.</strong>
+
+
+        </pre>
+      </div>
+
+
       <div class="card">
         <h3>📝 REGISTRO NO ETOOLS</h3>
         <pre>
@@ -625,6 +653,7 @@ CRD	Caridade/Ce	IBP	Ibiapina/Ce	MCA	Meruoca/Ce	PTT	Potiretama/Ce	VCS	Vicosa Do C
   
 </body>
 </html>
+
 
 
 
